--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <title>Community Volunteering Platform</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="./home.css">
+    <link rel="stylesheet" href="./volunteer/home.css">
 </head>
 
 <body>
@@ -23,95 +23,24 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto d-flex align-items-center gap-3">
                         <li class="nav-item">
-                            <a class="nav-link active" href="./home.html">Home</a>
+                            <a class="nav-link active" href="./register.html">SignUp</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./Tasks.html">Tasks</a>
+                            <a class="nav-link" href="./volunteerlogin.html">Volunteer Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./Rating.html">Rating</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./search-filter.html" >Filter</a>
-                        </li>
-                        <li class="nav-item d-lg-none">
-                            <div class="dropdown-center">
-                                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    More
-                                </button>
-                                <ul class="dropdown-menu">
-                                  <li><a class="dropdown-item" href="#">Volunteer Login</a></li>
-                                  <li><a class="dropdown-item" href="#">Organisation Login</a></li>
-                                    <li><a class="dropdown-item" href="#">Register</a></li>
-                                </ul>
-                              </div>
+                            <a class="nav-link" href="./organisationlogin.html">Organisation Login</a>
                         </li>
 
                     </ul>
                     
                 </div>
-                <div class="dropdown-center d-none d-lg-block">
-                    <button class="btn dropdown-toggle btn-success" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Login/SignUp
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="./volunteerlogin.html">Volunteer Login</a></li>
-                        <li><a class="dropdown-item" href="./organisationlogin.html">Organisation Login</a></li>
-                        <li><a class="dropdown-item" href="./register.html">Register</a></li>
-                    </ul>
-                  </div>
         </div>
 
     </nav>
 
 
     <main class="w-100">
-            <div class="modal fade" tabindex="-1" id="userProfileModalLabel" aria-labelledby="userProfileModalLabel" aria-hidden="true">
-              <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title">My Profile</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body">
-                    <form id="userProfileForm">
-                        <div class="input-group mb-3" style="width: 100%; margin: 10px;">
-                            <span class="input-group-text" style="width: 20%;">User ID</span>
-                            <input type="text" id="userId" class="form-control" readonly>
-                            <button class="btn btn-outline-secondary toggle-edit" type="button">Edit</button>
-                        </div>
-                        <!-- Name -->
-                        <div class="input-group mb-3" style="width: 100%; margin: 10px;">
-                            <span class="input-group-text" style="width: 20%;">Name</span>
-                            <input type="text" id="userName" class="form-control" readonly>
-                            <button class="btn btn-outline-secondary toggle-edit" type="button">Edit</button>
-                        </div>
-                        <!-- Email -->
-                        <div class="input-group mb-3" style="width: 100%; margin: 10px;">
-                            <span class="input-group-text" style="width: 20%;">Email</span>
-                            <input type="email" id="userEmail" class="form-control" readonly>
-                            <button class="btn btn-outline-secondary toggle-edit" type="button">Edit</button>
-                        </div>
-                        <!-- Phone -->
-                        <div class="input-group mb-3" style="width: 100%; margin: 10px;">
-                            <span class="input-group-text" style="width: 20%;">Phone</span>
-                            <input type="text" id="userPhone" class="form-control" readonly>
-                            <button class="btn btn-outline-secondary toggle-edit" type="button">Edit</button>
-                        </div>
-                        <!-- Role -->
-                        <div class="input-group mb-3" style="width: 100%; margin: 10px;">
-                            <span class="input-group-text" style="width: 20%;">Role</span>
-                            <input type="text" id="userRole" class="form-control" readonly>
-                            <button class="btn btn-outline-secondary toggle-edit" type="button">Edit</button>
-                        </div>
-                      </form>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                  </div>
-                </div>
-              </div>
-            </div>
         <div class="bg-image">
             <div class="overlay"></div>
             <div class="content headcontent">
