--- a/organisation/my-tasks.html
+++ b/organisation/my-tasks.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Volunteering Platform</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.3/dist/quartz/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../volunteer/home.css">
+    <link rel="stylesheet" href="./organisation-home.css">
 
     <style>
         .sub-navbar {
@@ -77,9 +78,8 @@
                                 <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     More
                                 </button>
-                                <ul class="dropdown-menu">
+                                <ul class="dropdown-menu custom-dropdown">
                                   <li><a class="dropdown-item" href="#">Profile</a></li>
-                                  <li><a class="dropdown-item" href="#">My Tasks</a></li>
                                 </ul>
                               </div>
                         </li>
@@ -91,7 +91,7 @@
                     <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         More
                     </button>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu custom-dropdown">
                         <li><a class="dropdown-item" href="#">Profile</a></li>
                     </ul>
                   </div>
