--- a/organisation/organisation-home.html
+++ b/organisation/organisation-home.html
@@ -7,7 +7,7 @@
     <title>Community Volunteering Platform</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../volunteer/home.css">
+    <link rel="stylesheet" href="./organisation-home.css">
 </head>
 
 <body>
@@ -29,7 +29,16 @@
                             <a class="nav-link" href="./my-tasks.html">Tasks</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./taskRating.html">Rating</a>
+                            <!-- <a class="nav-link" href="./taskRating.html">Rating</a> -->
+                            <div class="dropdown-center">
+                                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Rating
+                                </button>
+                                <ul class="dropdown-menu">
+                                  <li><a class="dropdown-item" href="#">Profile</a></li>
+                                  <li><a class="dropdown-item" href="#">My Tasks</a></li>
+                                </ul>
+                              </div>
                         </li>
                         <li class="nav-item d-lg-none">
                             <div class="dropdown-center">
@@ -50,7 +59,7 @@
                     <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         More
                     </button>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu custom-dropdown">
                         <li><a class="dropdown-item" href="#">Profile</a></li>
                     </ul>
                   </div>
