--- a/organisation/taskCreation.html
+++ b/organisation/taskCreation.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Creation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../volunteer/home.css">
+    <link rel="stylesheet" href="./organisation-home.css">
     <style>
         main {
             min-height: 82vh;
@@ -83,7 +83,7 @@
                     <button class="btn dropdown-toggle btn-success" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         More
                     </button>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu custom-dropdown">
                         <li><a class="dropdown-item" href="./volunteerlogin.html"></a></li>
                         <li><a class="dropdown-item" href="./organisationlogin.html">Organisation Login</a></li>
                         <li><a class="dropdown-item" href="./register.html">Register</a></li>
