--- a/organisation/taskRating.html
+++ b/organisation/taskRating.html
@@ -6,7 +6,7 @@
     <title>Enhanced Rating Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="../volunteer/home.css">
+    <link rel="stylesheet" href="./organisation-home.css">
     <style>
         body {
             background-color: #f8f9fa;
@@ -97,7 +97,7 @@
                                 <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     More
                                 </button>
-                                <ul class="dropdown-menu">
+                                <ul class="dropdown-menu modified">
                                   <li><a class="dropdown-item" href="#">Profile</a></li>
                                   <li><a class="dropdown-item" href="#">My Tasks</a></li>
                                 </ul>
@@ -111,7 +111,7 @@
                     <button class="btn dropdown-toggle " type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         More
                     </button>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu custom-dropdown">
                         <li><a class="dropdown-item" href="#">Profile</a></li>
                         <li><a class="dropdown-item" href="#">My Tasks</a></li>
                     </ul>
