--- a/organisation/taskUpdation.html
+++ b/organisation/taskUpdation.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Updation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../volunteer/home.css">
+    <link rel="stylesheet" href="./organisation-home.css">
     <style>
         main {
             min-height: 82vh;
@@ -53,10 +53,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="./home.html">Home</a>
+                        <a class="nav-link active" href="./organisation-home.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Tasks.html">Tasks</a>
+                        <a class="nav-link" href="./my-tasks.html">Tasks</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="taskRating.html">Rating</a>
@@ -66,7 +66,7 @@
                             <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 More
                             </button>
-                            <ul class="dropdown-menu">
+                            <ul class="dropdown-menu custom-dropdown">
                               <li><a class="dropdown-item" href="#">Profile</a></li>
                               <li><a class="dropdown-item" href="#">My Tasks</a></li>
                             </ul>
