--- a/register.html
+++ b/register.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Volunteering</title>
     <link rel="stylesheet" href="login.css">
-    <link rel="stylesheet" href="./home.css">
+    <link rel="stylesheet" href="./volunteer/home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <style>
         .form-container {
             display: none;
