--- a/volunteer/Rating.html
+++ b/volunteer/Rating.html
@@ -85,7 +85,7 @@
                                     More
                                 </button>
                                 <ul class="dropdown-menu">
-                                  <li><a class="dropdown-item" href="#">Profile</a></li>
+                                    <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#userProfileModalLabel">Profile</a></li>
                                   <li><a class="dropdown-item" href="#">My Tasks</a></li>
                                   <li><a class="dropdown-item" href="#"><button class="btn btn-danger">Logout</button></a></li>
                                 </ul>
@@ -95,7 +95,7 @@
                     </ul>
                     
                 </div>
-                <div class="dropstart d-none d-lg-block">
+                <div class="dropdown d-none d-lg-block">
                     <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="bi bi-person-circle"></i>
                     </button>
