--- a/volunteer/Tasks.html
+++ b/volunteer/Tasks.html
@@ -78,7 +78,7 @@
                         <li class="nav-item d-lg-none">
                             <div class="dropdown-center">
                                 <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    More
+                                  <i class="bi bi-person-circle"></i>
                                 </button>
                                 <ul class="dropdown-menu">
                                   <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#userProfileModalLabel">Profile</a></li>
@@ -91,7 +91,7 @@
                     </ul>
                     
                 </div>
-                <div class="dropstart d-none d-lg-block">
+                <div class="dropdown d-none d-lg-block">
                     <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="bi bi-person-circle"></i>
                     </button>
