--- a/volunteer/home.html
+++ b/volunteer/home.html
@@ -38,12 +38,12 @@
                         <li class="nav-item d-lg-none">
                             <div class="dropdown-center">
                                 <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    More
+                                    <i class="bi bi-person-circle"></i>
                                 </button>
                                 <ul class="dropdown-menu">
-                                  <li><a class="dropdown-item" href="#">Volunteer Login</a></li>
-                                  <li><a class="dropdown-item" href="#">Organisation Login</a></li>
-                                    <li><a class="dropdown-item" href="#">Register</a></li>
+                                    <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#userProfileModalLabel">Profile</a></li>
+                                  <li><a class="dropdown-item" href="#">My Tasks</a></li>
+                                  <li><a class="dropdown-item" href="#"><button class="btn btn-danger">Logout</button></a></li>
                                 </ul>
                               </div>
                         </li>
@@ -51,14 +51,14 @@
                     </ul>
                     
                 </div>
-                <div class="dropdown-center d-none d-lg-block">
-                    <button class="btn dropdown-toggle btn-success" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Login/SignUp
+                <div class="dropdown-center">
+                    <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="bi bi-person-circle"></i>
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="./volunteerlogin.html">Volunteer Login</a></li>
-                        <li><a class="dropdown-item" href="./organisationlogin.html">Organisation Login</a></li>
-                        <li><a class="dropdown-item" href="./register.html">Register</a></li>
+                        <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#userProfileModalLabel">Profile</a></li>
+                      <li><a class="dropdown-item" href="#">My Tasks</a></li>
+                      <li><a class="dropdown-item" href="#"><button class="btn btn-danger">Logout</button></a></li>
                     </ul>
                   </div>
         </div>
