--- a/volunteer/search-filter.html
+++ b/volunteer/search-filter.html
@@ -106,7 +106,7 @@
                     </ul>
                     
                 </div>
-                <div class="dropstart d-none d-lg-block">
+                <div class="dropdown d-none d-lg-block">
                     <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="bi bi-person-circle"></i>
                     </button>
